@@ -19,7 +19,7 @@ ENUM ( Options,
        Spectate,
        Offline,
        NoUi,
-       Tourney,
+       Tournament,
        MaxDelay,
        DefaultRollback,
        Fullscreen,
