@@ -61,6 +61,8 @@ public:
 
     const NetplayConfig& getNetplayConfig() const { return netplayConfig; }
 
+    bool isTournament() const { return tournament; }
+
 
     static void *getConsoleWindow();
 
@@ -83,6 +85,8 @@ private:
     uint32_t mappedKey = 0;
 
     bool upToDate = false;
+
+    bool tournament = false;
 
     void netplay ( RunFuncPtr run );
     void spectate ( RunFuncPtr run );
